--- a/rpm/harbour-wifianalyser.changes.in
+++ b/rpm/harbour-wifianalyser.changes.in
@@ -8,6 +8,9 @@
 # * date Author's Name <author's email> version-release
 # - Summary of changes
 
+* Sun Nov 09 2019 Jack Tar <jack.tar@example.com> 2.1.5-1
+- Updated Finnish translation
+- Added sailjail sandboxing rules and moved config for that
 * Thu Aug 22 2019 Jack Tar <jack.tar@example.com> 2.1.4-2
 - Added Chinese translation
 - Updated French translation
